# FractionOperation

./: README.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  mwFractionOp.cxx
src/operations/: CMakeLists.txt  Fraction.cxx  Fraction.h  Operators-impl.cxx
src/tests/: CMakeLists.txt  FractionTests.cxx
